# BasedRatty

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
config/: ratty.toml
nix/: README.md  default.nix
src/: config.rs  keyboard.rs  main.rs  mouse.rs  runtime.rs  terminal.rs
src/scene/: mod.rs
