[package]
name = "ratty"
version = "0.4.1"
description = "A GPU-rendered terminal emulator that supports inline 3D graphics"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/orhun/ratty"
repository = "https://github.com/orhun/ratty"
keywords = ["terminal", "emulator", "3d", "graphics"]
categories = ["command-line-utilities", "graphics"]
edition = "2024"
exclude = ["website/**", ".github/**", "widget/**"]

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6", features = ["wayland-data-control"] }
base64 = "0.22"
bevy = { version = "0.18.1", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_log",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_winit",
    "gltf_animation",
    "keyboard",
    "mouse",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "tonemapping_luts",
    "wayland",
    "x11",
    "zstd_rust",
] }
clap = { version = "4.5", features = ["derive"] }
etcetera = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
parley_ratatui = "0.2.1"
pollster = "0.4"
portable-pty = "0.8"
ratatui = "0.30"
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
tobj = "4.0"
toml = "0.8"
vt100 = "0.16"
winit = { version = "0.30", default-features = false }

[build-dependencies]
winresource = "0.1.31"

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"
